force-app/main/default/objects/Bulk_Upload_Data__c/Bulk_Upload_Data__c.object-meta.xml
<CustomObject>
    <label>Bulk Upload Data</label>
    <nameField>
        <displayFormat>BUDN-{0000}</displayFormat>
        <label>Bulk Upload Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Upload Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>