force-app/main/default/objects/Bulk_Upload_Data__c/fields/agencyFees__c.field-meta.xml
<CustomField>
    <fullName>agencyFees__c</fullName>
    <label>agencyFees</label>
    <length>30</length>
    <type>Text</type>
</CustomField>