force-app/main/default/objects/Bulk_Upload_Data__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <label>amount</label>
    <length>30</length>
    <type>Text</type>
</CustomField>