force-app/main/default/objects/Bulk_Upload_Data__c/fields/bank__c.field-meta.xml
<CustomField>
    <fullName>bank__c</fullName>
    <label>bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>