force-app/main/default/objects/Bulk_Upload_Data__c/fields/bankReference__c.field-meta.xml
<CustomField>
    <fullName>bankReference__c</fullName>
    <label>bankReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>