force-app/main/default/objects/Bulk_Upload_Data__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Bulk Upload Data</relationshipLabel>
    <relationshipName>Bulk_Upload_Data</relationshipName>
    <type>Lookup</type>
</CustomField>