force-app/main/default/objects/Bulk_Upload_Data__c/fields/Campaign_Active__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Active__c</fullName>
    <label>Campaign Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>