force-app/main/default/objects/Bulk_Upload_Data__c/fields/Campaign_Department__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Department__c</fullName>
    <label>Campaign Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>