force-app/main/default/objects/Bulk_Upload_Data__c/fields/Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Description__c</fullName>
    <label>Campaign Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>