force-app/main/default/objects/Bulk_Upload_Data__c/fields/Campaign_Parent__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Parent__c</fullName>
    <label>Campaign Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>