force-app/main/default/objects/Bulk_Upload_Data__c/fields/currCode__c.field-meta.xml
<CustomField>
    <fullName>currCode__c</fullName>
    <label>currCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>