force-app/main/default/objects/Bulk_Upload_Data__c/fields/donorId__c.field-meta.xml
<CustomField>
    <fullName>donorId__c</fullName>
    <label>donorId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>