force-app/main/default/objects/Bulk_Upload_Data__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <referenceTo>Bulk_Upload_Donations__c</referenceTo>
    <relationshipLabel>Bulk Upload Data</relationshipLabel>
    <relationshipName>Bulk_Upload_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>