force-app/main/default/objects/Bulk_Upload_Data__c/fields/fundRaisingUrl__c.field-meta.xml
<CustomField>
    <fullName>fundRaisingUrl__c</fullName>
    <label>fundRaisingUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>