force-app/main/default/objects/Bulk_Upload_Data__c/fields/gaEligible__c.field-meta.xml
<CustomField>
    <fullName>gaEligible__c</fullName>
    <label>gaEligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>