force-app/main/default/objects/Bulk_Upload_Data__c/fields/GAU_Allocation__c.field-meta.xml
<CustomField>
    <fullName>GAU_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GAU Allocation</label>
    <referenceTo>npsp__Allocation__c</referenceTo>
    <relationshipLabel>Bulk Upload Data</relationshipLabel>
    <relationshipName>Bulk_Upload_Data</relationshipName>
    <type>Lookup</type>
</CustomField>