force-app/main/default/objects/Bulk_Upload_Data__c/fields/hasError__c.field-meta.xml
<CustomField>
    <fullName>hasError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasError</label>
    <type>Checkbox</type>
</CustomField>