force-app/main/default/objects/Bulk_Upload_Data__c/fields/Is_Opportunity_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Opportunity Processed</label>
    <type>Checkbox</type>
</CustomField>