force-app/main/default/objects/Bulk_Upload_Data__c/fields/Is_Payment_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Processed</label>
    <type>Checkbox</type>
</CustomField>