force-app/main/default/objects/Bulk_Upload_Data__c/fields/itemCode__c.field-meta.xml
<CustomField>
    <fullName>itemCode__c</fullName>
    <label>itemCode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>