force-app/main/default/objects/Bulk_Upload_Data__c/fields/medium__c.field-meta.xml
<CustomField>
    <fullName>medium__c</fullName>
    <label>medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>