force-app/main/default/objects/Bulk_Upload_Data__c/fields/netDonationAmount__c.field-meta.xml
<CustomField>
    <fullName>netDonationAmount__c</fullName>
    <label>netDonationAmount</label>
    <length>40</length>
    <type>Text</type>
</CustomField>