force-app/main/default/objects/Bulk_Upload_Data__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bulk Upload Data</relationshipLabel>
    <relationshipName>Bulk_Upload_Data</relationshipName>
    <type>Lookup</type>
</CustomField>