force-app/main/default/objects/Bulk_Upload_Data__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>npe01__OppPayment__c</referenceTo>
    <relationshipLabel>Bulk Upload Data</relationshipLabel>
    <relationshipName>Bulk_Upload_Data</relationshipName>
    <type>Lookup</type>
</CustomField>