force-app/main/default/objects/Bulk_Upload_Data__c/fields/paymentMethod__c.field-meta.xml
<CustomField>
    <fullName>paymentMethod__c</fullName>
    <label>paymentMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>