force-app/main/default/objects/Bulk_Upload_Data__c/fields/primaryCampaignSource__c.field-meta.xml
<CustomField>
    <fullName>primaryCampaignSource__c</fullName>
    <label>primaryCampaignSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>