force-app/main/default/objects/Bulk_Upload_Data__c/fields/regionalOffice__c.field-meta.xml
<CustomField>
    <fullName>regionalOffice__c</fullName>
    <label>regionalOffice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>