force-app/main/default/objects/Bulk_Upload_Data__c/fields/Row_Index__c.field-meta.xml
<CustomField>
    <fullName>Row_Index__c</fullName>
    <label>Row Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>