force-app/main/default/objects/Bulk_Upload_Data__c/fields/sfAccountId__c.field-meta.xml
<CustomField>
    <fullName>sfAccountId__c</fullName>
    <label>sfAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>