force-app/main/default/objects/Bulk_Upload_Data__c/fields/sfContactId__c.field-meta.xml
<CustomField>
    <fullName>sfContactId__c</fullName>
    <label>sfContactId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>