force-app/main/default/objects/Bulk_Upload_Data__c/fields/stage__c.field-meta.xml
<CustomField>
    <fullName>stage__c</fullName>
    <label>stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>