force-app/main/default/objects/Bulk_Upload_Data__c/fields/stipulation__c.field-meta.xml
<CustomField>
    <fullName>stipulation__c</fullName>
    <label>stipulation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>