force-app/main/default/objects/Bulk_Upload_Data__c/fields/transactionSource__c.field-meta.xml
<CustomField>
    <fullName>transactionSource__c</fullName>
    <label>transactionSource</label>
    <length>100</length>
    <type>Text</type>
</CustomField>